@startuml

skinparam linetype ortho

' Human management
class User {
    -id: ?int
    -roles: array
    ..Personal data..
    -username: string
    -password: string
    -email: string
    -lastName: string
    -firstName: string
    -birtDate: DateTimeInterface
    -timeZone: string
    ..Dates..
    -emailVerifiedAt: DateTimeInterface
    -createdAt: DateTimeInterface
    -deletedAt: DateTimeInterface
    -activatedAt: DateTimeInterface
    -suspendedAt: DateTimeInterface
    ..Status..
    -active: bool
    -emailVerified: bool
    -suspended: bool
    -deleted: bool
}

class Athlete {
    -id: ?int
    -lastName: string
    -firstName: string
    -sportTeams: Collection<int, SportTeam>
}

' Money management
class Receipt{
    -id: ?int
    -amount: int
}

class Wallet {
    -id: ?int
    -balance: int
}

'History
class Transaction{
    -id: ?int
    -date: DateTimeInterface
    -totalPrice: int
}

class Bet{
    -id: ?int
}

'Bets
class BetData {
    -id: ?int
    -amount: int
    -paid: bool
    -date: DateTime
    -cote: int
}

class BetChoice{
    -id: int
    -choice: array<string, int>
}

class BetTemplate{
    -id: ?int
    -availableBetsList: array<string, array<string>>
}

class BetTemplateChoice{
    -id: ?int
    -updatedDescription : array<string, array<string>>
}

' Sport management
class SportEvent {
    -id: ?int
    -location: string
    -competition: string
    -date: Date
    -timezone: DateTimeZone
}

class SportTeam {
    -id: ?int
    -teamName: string
}

class SportType {
    -id: ?int
    -nameType: string
    -nbrAthleteActive: int
}

' ========================================================================='

' Relation
User "1" *- "1" Wallet : manage >
User "1" *-- "0..*" Transaction : pay >
Receipt "0..*" *-- "1" Wallet : print <
Bet "1" *- "1" BetChoice : insert <
Bet "1" *-- "1" BetData : insert <
SportType "1" --* "1" BetTemplate : list >


SportTeam "1..*" o-- "1..*" Athlete : employ >
Transaction "1..*" o-- "1" Bet : add <
SportTeam "1..*" o-- "2..*" SportEvent : participate >
SportEvent "1" o-- "0..*" SportType : define <
BetChoice "1" o--- "1" BetTemplateChoice: choose >
BetTemplate "0..*" --o "1" BetTemplateChoice : specify <

@enduml
